Fix header to containing element to prevent overflow of the admin menu for logged-in users.

--- a/docroot/themes/custom/crosscut_festival/css/style.css
+++ b/docroot/themes/custom/crosscut_festival/css/style.css
@@ -10120,7 +10120,6 @@ caption {
   width: 100%;
   max-width: 100%;
   z-index: 1030;
-  top: 0;
 }
 
 .nav-container {
