--- a/docroot/themes/custom/crosscut_festival/scss/site/_header.scss
+++ b/docroot/themes/custom/crosscut_festival/scss/site/_header.scss
@@ -8,7 +8,6 @@
   width:100%;
   max-width: 100%;
   z-index: $zindex-fixed;
-  top: 0;
 }
 
 .nav-container {
